--- a/src/app/gameboard/gameboard.component.scss
+++ b/src/app/gameboard/gameboard.component.scss
@@ -61,6 +61,15 @@
 }
 
 
+.movement {
+    font-weight: bold;
+    
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    left: 2%;
+}
+
 .life {
 
     // background-color: powderblue; // debug
