fix : player cannot select two pawn simultaneously anymore

--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -6,7 +6,7 @@
                 <p class="player-turn">Tour du joueur : {{currentPlayer}}</p>
             </div>
             <div class="col-6">
-                <button class="btn btn-outline-secondary" (click)="endTurn()">Fin du tour</button>
+                <button class="btn btn-secondary" (click)="endTurn()">Fin du tour</button>
             </div>
         </div>
     </div>
