--- a/src/app/gameboard/gameboard.component.scss
+++ b/src/app/gameboard/gameboard.component.scss
@@ -61,6 +61,40 @@
 }
 
 
+.fa-bolt {
+    margin: 0;
+    position: absolute;
+    top: 15%;
+    left: -160%;
+}
+
+.contactAtk {
+    font-weight: bold;
+    
+    margin: 0;
+    position: absolute;
+    top: 0;
+    left: 17%;
+}
+
+.rangedAtk {
+    font-weight: bold;
+    
+    margin: 0;
+    position: absolute;
+    top: 20%;
+    left: 2%;
+}
+
+.defense {
+    font-weight: bold;
+    
+    margin: 0;
+    position: absolute;
+    top: 0;
+    right: 2%;
+}
+
 .movement {
     font-weight: bold;
     
