add 1 movement limit per turn, 1 attack limit per turn, make some kind of dirty responsive design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,14 @@
     <br>
     <div class="row">
         <div class="col-2"></div>
-        <div class="col-3">
+        <div class="cardgame col-3">
             <h1>Shape Battle</h1>
             <br>
             <app-option-board></app-option-board>
             <br>
             <app-game-info></app-game-info>
         </div>
-        <div class="col-3">
+        <div class="boardgame col-3">
             <br>
             <br>
             <br>
